# sol-blackjack

./: Anchor.toml  DEPLOYMENT.md  FRONTEND_SOLANA_INTEGRATION_COMPLETE_GUIDE.md  GAME_FLOW_FIXES.md  PROGRESS_REPORT.md  REACT_ERROR_130_DEBUGGING_COMPLETE_DOCUMENTATION.md  REACT_ERROR_130_TROUBLESHOOTING.md  README.md  SOLANA_INTEGRATION_SUMMARY.md  TECHNICAL_CHANGES_LOG.md  TESTING.md  deploy-testnet.sh  package-lock.json  package.json  pnpm-lock.yaml  run-tests.js  send-real-transactions.js  simple-program-test.js
build-circuit/blackjackMain_js/: blackjackMain.wasm
circuits/blackjack/: blackjack.circom  blackjack.light  blackjackMain.circom
programs/blackjack/: Cargo.toml
programs/blackjack-sol/: Cargo.toml
programs/blackjack-sol/src/: lib.rs
programs/blackjack/src/: auto_generated_accounts.rs  lib.rs  nft.rs  processor.rs  psp_accounts.rs  verifying_key_blackjack.rs
tests/: blackjack-integration.js  blackjack-simple.ts  blackjack-sol.ts  blackjack.ts  init.ts  rock-paper-scissors.ts  swap.ts
zkblackjack-ui/: REACT_ERROR_130_COMPLETE_DEBUGGING_LOG.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
zkblackjack-ui/constants/: index.js
zkblackjack-ui/idl/: blackjack.json
zkblackjack-ui/public/zkproof/: blackjack.wasm  blackjack.zkey
zkblackjack-ui/setup/: createCounterByPlayer.ts
zkblackjack-ui/src/components/: ClusterDataAccess.tsx  ErrorBoundary.tsx  Game.tsx  Modal.tsx  Navbar.tsx  ProgramDebug.tsx  Rules.tsx  (+5 more)
zkblackjack-ui/zkproof/: snarkjsBlackjack.js  snarkjsZkproof.js
(+11 files in other folders)
