[package]
name = "blackjack"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blackjack"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
lto = true

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
memoffset = "0.9.0"
